--- a/focus/templates/detail.html
+++ b/focus/templates/detail.html
@@ -5,10 +5,11 @@
         <!-- Article -->
         <div class="row">
             <article class="col-xs-12">
-                <h2>{{ article.title }}</h2>
-                <div class="article_info">
-                    <span class="">{{ article.author }}</span>
-                    <span class="">{{ article.create_time|date:"Y-m-d H:i" }}</span>
+                <h2 class="entry-title">{{ article.title }}</h2>
+                <div class="entry-meta">
+                    <span class="post-author">{{ article.author }}</span>
+                    <span class="post-date">{{ article.create_time|date:"Y-m-d H:i" }}</span>
+                    <span class="views-count">浏览 {{ article.views }}</span>
                 </div>
                 <div class="category">
                     分类：
@@ -24,7 +25,6 @@
                 <p>{{ article.content | safe }}</p>
 
                 <ul class="list-inline">
-                    <li><a href=" "><span class="glyphicon glyphicon-comment"></span> {{ article.comment_num }} Comments</a></li>
                     <li><a href="/focus/{{ article.id }}/keep/"><span class="glyphicon glyphicon-star-empty"></span>{{ article.keep_num }} keep</a></li>
                     <li><a href="/focus/{{ article.id }}/poll/"><span class="glyphicon glyphicon-thumbs-up"></span>{{ article.like_num }} likes</a></li>
                 </ul>
