--- a/focus/templates/index.html
+++ b/focus/templates/index.html
@@ -64,10 +64,16 @@
         {% for article_info in articles_info %}
             <div class="row">
                 <article class="col-xs-12">
-                    <h3><a id="article_title", href="/focus/{{ article_info|get_key:"article"|get_attr:"id" }}">{{ article_info|get_key:"article"|get_attr:"title" }}</a></h3>
+                    <!-- <h3><a id="article_title", href="/focus/{{ article_info|get_key:"article"|get_attr:"id" }}">{{ article_info|get_key:"article"|get_attr:"title" }}</a></h3>
                     <div class="article_info">
                         <span class="">{{ article_info|get_key:"article"|get_attr:"author" }}</span>
                         <span class="">{{ article_info|get_key:"article"|get_attr:"create_time"|date:"Y-m-d H:i" }}</span>
+                    </div> -->
+                    <h2 class="entry-title"><a href="/focus/{{ article_info|get_key:"article"|get_attr:"id" }}">{{ article_info|get_key:"article"|get_attr:"title" }}</a></h2>
+                    <div class="entry-meta">
+                        <span class="post-author">{{ article_info|get_key:"article"|get_attr:"author" }}</span>
+                        <span class="post-date">{{ article_info|get_key:"article"|get_attr:"create_time"|date:"Y-m-d H:i" }}</span>
+                        <span class="views-count">浏览 {{ article_info|get_key:"article"|get_attr:"views" }}</span>
                     </div>
                     <div class="category">
                         分类：
@@ -79,7 +85,7 @@
                             <a href="#">{{ tag }}</a>
                         {% endfor %}
                     </div>
-                    <p>{{ article_info|get_key:"article"|get_attr:"content"|truncatechars_html:80 | safe }}</p>
+                    <p>{{ article_info|get_key:"article"|get_attr:"content"|truncatechars_html:54 | safe }}</p>
                     <p><button class="btn btn-default" onclick="window.location.href='/focus/{{ article_info|get_key:"article"|get_attr:"id" }}' ">Read More</button></p>
                     <ul class="list-inline">
                         <li><a href="#"><span class="glyphicon glyphicon-comment"></span>{{ article_info|get_key:"article"|get_attr:"comment_num" }} Comments</a></li>
