--- a/focus/templates/index.html
+++ b/focus/templates/index.html
@@ -95,6 +95,36 @@
             </div>            
             <hr>
         {% endfor %}
+
+        <!--paginator-->
+        {% if is_paginated %}
+        <div class="pagination">
+          {% if first %}
+            <a href="?page=1">1</a>
+          {% endif %}
+          {% if left %}
+            {% if left_has_more %}
+                <span>...</span>
+            {% endif %}
+            {% for i in left %}
+                <a href="?page={{ i }}">{{ i }}</a>
+            {% endfor %}
+          {% endif %}
+          <a href="?page={{ page_obj.number }}" style="color: red">{{ page_obj.number }}</a>
+          {% if right %}
+            {% for i in right %}
+                <a href="?page={{ i }}">{{ i }}</a>
+            {% endfor %}
+            {% if right_has_more %}
+                <span>...</span>
+            {% endif %}
+          {% endif %}
+          {% if last %}
+            <a href="?page={{ paginator.num_pages }}">{{ paginator.num_pages }}</a>
+          {% endif %}
+        </div>
+        {% endif %}
+        <!--/paginator-->
     </div>
     <!-- /Center Column -->
 {% endblock center %}
