show the number of articles under the category and archives

--- a/focus/templates/article_base.html
+++ b/focus/templates/article_base.html
@@ -144,7 +144,7 @@
                  {% for date in date_list %}
                      <li>
                          <a href="{% url 'focus:archives' date.year date.month %}">{{ date.year }}
-                             年 {{ date.month }} 月</a>
+                             年 {{ date.month }} 月<span class="post-count">({{ date|get_articlenums }})</span></a>
                      </li>
                  {% empty %}
                      暂无归档！
@@ -160,7 +160,7 @@
                     {% for category in category_list %}
                         <li>
                             <a href="{% url 'focus:category' category.pk %}">{{ category.name }} <span
-                                    class="post-count">({{ category.num_posts }})</span></a>
+                                    class="post-count">({{ category.num_articles }})</span></a>
                         </li>
                     {% empty %}
                         暂无分类！
