--- a/focus/templates/index.html
+++ b/focus/templates/index.html
@@ -110,7 +110,7 @@
                 <a href="?page={{ i }}">{{ i }}</a>
             {% endfor %}
           {% endif %}
-          <a href="?page={{ page_obj.number }}" style="color: red">{{ page_obj.number }}</a>
+          <a href="?page={{ page_obj.number }}" style="color:blue">{{ page_obj.number }}</a>
           {% if right %}
             {% for i in right %}
                 <a href="?page={{ i }}">{{ i }}</a>
