--- a/focus/templates/article_base.html
+++ b/focus/templates/article_base.html
@@ -168,6 +168,22 @@
                 </ul>
             </div>
 
+            <!--tag cloud-->
+            <div class="widget widget-tag-cloud">
+              <h3 class="widget-title">标签云</h3>
+              {% get_tags as tag_list %}
+              <ul>
+                {% for tag in tag_list %}
+                <li>
+                  <a href="{% url "focus:tag" tag.id %}">{{ tag.name }}</a>
+                </li>
+                {% empty %}
+                暂无标签！
+                {% endfor %}
+              </ul>
+            </div>
+            <!--/tag cloud-->
+
 		</div><!--/Right Column -->
 	</div><!--/container-fluid-->
 
