--- a/focus/templates/article_base.html
+++ b/focus/templates/article_base.html
@@ -184,6 +184,12 @@
             </div>
             <!--/tag cloud-->
 
+            <!--RSS-->
+            <div class="rss">
+                <a href="{% url 'rss' %}"><span class="ion-social-rss-outline"></span> RSS 订阅</a>
+            </div>
+            <!--/RSS-->
+
 		</div><!--/Right Column -->
 	</div><!--/container-fluid-->
 
