--- a/focus/templates/article_base.html
+++ b/focus/templates/article_base.html
@@ -14,6 +14,7 @@
     <link href="{% static "css/bootstrap.min.css" %}" rel="stylesheet">
     <link href="{% static "css/pygments.css" %}" rel="stylesheet">
     <link href="{% static "css/custom.css" %}" rel="stylesheet">
+    <link href="{% static 'css/highlights/friendly.css' %}" rel="stylesheet" >
     <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
 
 </head>
@@ -120,6 +121,9 @@
                 </div>
             </div>
             {% endif %}
+
+            {% block toc %}
+            {% endblock toc %}
 
 			<!-- last recent articles -->
             <div class="widget widget-recent-posts">
