--- a/focus/templates/article_base.html
+++ b/focus/templates/article_base.html
@@ -56,11 +56,12 @@
                 </ul>
 
 				<!-- Search -->
-				<form class="navbar-form navbar-right" role="search">
+				<form class="navbar-form navbar-right" role="search" action="{% url "focus:search" %}">
 					<div class="form-group">
-						<input type="text" class="form-control">
+						<!-- <input type="text" class="form-control"> -->
+                        <input type="search" name="q" placeholder="搜索" class="form-control" required>
 					</div>
-					<button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search"></span> Search</button>
+					<button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search"></span></button>
 				</form>
 
             </div>
