--- a/focus/templates/login.html
+++ b/focus/templates/login.html
@@ -1,47 +1,45 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="zh-cn">
 <head>
-	<meta charset="UTF-8">
-	<title>登录 - CMS-首页</title>
-	<meta name="keywords" content="XICMS">
-	<meta name="content" content="XICMS">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
-	{% load staticfiles %}
-	<link rel="icon" href="{% static 'images/apple.ico' type="image/x-icon" %}"/>
-    <link type="text/css" rel="stylesheet" href="{% static "css/login.css" %}">
-    <script type="text/javascript" src="js/jquery-1.8.0.min.js"></script>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <title>登录</title>
+    <link rel="stylesheet" href="https://unpkg.com/mobi.css/dist/mobi.min.css">
+    <style>
+        .errorlist {
+            color: red;
+        }
+    </style>
 </head>
-<body class="login_bj" >
-<div class="zhuce_body">
-    <div class="zhuce_kong login_kuang">
-    	<div class="zc">
-        	<div class="bj_bai">
-            <h3>登录</h3>
-	   	  		<form action="" method="post">
-					{% csrf_token %}
-					{% for field in form %}
-						{{ field.lable_tag }}
-						{{ field }}
-					{% endfor %}
-	                <div>
-	               		<a href="#">忘记密码？</a><input name="" type="checkbox" value="" checked><span>记住我</span>
-	                </div>
-	                <input name="登录" type="submit" class="btn_zhuce" value="登录">
-	        	</form>
-            </div>
-        	<div class="bj_right">
-            	<p>使用以下账号直接登录</p>
-                <a href="#" class="zhuce_qq">QQ登录</a>
-                <a href="#" class="zhuce_wb">微博登录</a>
-                <a href="#" class="zhuce_wx">微信登录</a>
-                <p>还没账号？<a href="../register">立即注册</a></p>
-
+<body>
+<div class="flex-center">
+    <div class="container">
+        <div class="flex-center">
+            <div class="unit-1-2 unit-1-on-mobile">
+                <h1><a href="{% url 'index' %}">CMS - 管理系统</a></h1>
+                <h3>登录</h3>
+                <form class="form" action="{% url 'focus:login' %}" method="post">
+                    {% csrf_token %}
+                    {{ form.non_field_errors }}
+                    {% for field in form %}
+                        {{ field.label_tag }}
+                        {{ field }}
+                        {{ field.errors }}
+                        {% if field.help_text %}
+                            <p class="help text-small text-muted">{{ field.help_text|safe }}</p>
+                        {% endif %}
+                    {% endfor %}
+                    <button type="submit" class="btn btn-primary btn-block">登录</button>
+                    <input type="hidden" name="next" value="{{ next }}"/>
+                </form>
+                <div class="flex-left top-gap text-small">
+                    <div class="unit-2-3"><span>没有账号？<a href="{% url 'focus:register' %}">立即注册</a></span></div>
+                    <div class="unit-1-3 flex-right"><span><a href="reset_password.html">忘记密码？</a></span></div>
+                </div>
             </div>
         </div>
-        <P>www.justbreaking.com&nbsp;©&nbsp;版权所有</P>
     </div>
-
 </div>
-
 </body>
 </html>
