--- a/focus/templates/register.html
+++ b/focus/templates/register.html
@@ -1,48 +1,39 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="zh-cn">
 <head>
-	<meta charset="UTF-8">
-	<title>注册 - 首页</title>
-	<meta name="keywords" content="XICMS">
-	<meta name="content" content="XICMS">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
-	{% load staticfiles %}
-	<link rel="icon" href="{% static 'images/apple.ico' type="image/x-icon" %}"/>
-    <link type="text/css" rel="stylesheet" href="{% static "css/login.css" %}">
-    <script type="text/javascript" src="js/jquery.min.js"></script>
-
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <title>注册</title>
+    <link rel="stylesheet" href="https://unpkg.com/mobi.css/dist/mobi.min.css">
+    <style>
+        .errorlist {
+            color: red;
+        }
+    </style>
 </head>
-<body class="login_bj" >
-
-<div class="zhuce_body">
-    <div class="zhuce_kong">
-    	<div class="zc">
-        	<div class="bj_bai">
-            <h3>CMS 注册</h3>
-       	  	  <form action="" method="post">
-				{% csrf_token %}
-				{% for field in form %}
-				  {{ field.lable_tag }}
-				  {{ field }}
-				{% endfor %}
-				<div>
-						<input name="" type="checkbox" value=""><span>已阅读并同意<a href="#" target="_blank"><span class="lan">《XXXXX使用协议》</span></a></span>
-				</div>
-				<input name="注册" type="submit" class="btn_zhuce" value="注册">
-
-            </form>
-            </div>
-        	<div class="bj_right">
-            	<p>使用以下账号直接登录</p>
-                <a href="#" class="zhuce_qq">QQ注册</a>
-                <a href="#" class="zhuce_wb">微博注册</a>
-                <a href="#" class="zhuce_wx">微信注册</a>
-                <p>已有账号？<a href="../login">立即登录</a></p>
-
+<body>
+<div class="flex-center">
+    <div class="container">
+        <div class="flex-center">
+            <div class="unit-1-2 unit-1-on-mobile">
+                <h1><a href="{% url 'index' %}">CMS - 管理系统</a></h1>
+                <h3>注册</h3>
+                <form class="form" action="{% url 'focus:register' %}" method="post">
+                    {% csrf_token %}
+                    {% for field in form %}
+                        {{ field.label_tag }}
+                        {{ field }}
+                    {% endfor %}
+                    <button type="submit" class="btn btn-primary btn-block">注册</button>
+                    <input type="hidden" name="next" value="{{ next }}"/>
+                </form>
+                <div class="flex-center top-gap text-small">
+                    <a href="{% url 'focus:login' %}">已有账号登录</a>
+                </div>
             </div>
         </div>
-        <P>www.xunmzy.com&nbsp;©&nbsp;版权所有</P>
     </div>
-
+</div>
 </body>
 </html>
